# aoc2024

./: pyproject.toml
day_01/: main.py
day_02/: error_less.txt  main.py
day_03/: main.py
day_04/: main.py
day_05/: main.py
day_06/: dummy_animate.py  dummy_pygame.py  main.py
day_07/: main.py
day_08/: main.py
