[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["sweemeng <sweester@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.30.0"
asciimatics = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
